--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/database": "^18.3.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@types/socket.io-client": "^3.0.0",
     "expo": "^49.0.9",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -34,7 +35,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
